--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -43,7 +43,7 @@ jobs:
           fetch-depth: 0
           ref: "main"
 
-      - run: echo "VERSION=$(git describe --tags --abbrev=0)-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+      - run: echo "VERSION=$(git describe --tags --abbrev=0 2>/dev/null || echo "0.0.0")-$(git rev-parse --short HEAD)" >> $GITHUB_ENV
 
       - uses: mikefarah/yq@master
         with:
